test/spec_vectors/select/fail/module_22.wat
(module (func $type-1st-operand-empty-in-loop (i32.const 0) (i32.const 0) (i32.const 0) (loop (select) (drop))))